--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --write \"src/**/*.{js,ts,json,css,scss,md,tsx}\""
+
+    
   },
   "dependencies": {
     "axios": "^1.7.9",
     "bulma": "^1.0.3",
+    "prettier": "^3.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
