--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "prettier": "prettier --write \"src/**/*.{js,ts,json,css,scss,md,tsx}\""
-
-    
   },
   "dependencies": {
     "axios": "^1.7.9",
     "bulma": "^1.0.3",
     "prettier": "^3.5.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-markdown": "^10.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
